fix print stylesheet issue in dark mode

--- a/web/src/styles/global.css
+++ b/web/src/styles/global.css
@@ -67,7 +67,7 @@
     }
     a {
         @apply  hover:text-black focus:text-black hover:bg-gray-200 focus:bg-yellow-300 rounded-md p-0.5 text-blue-700
-        dark:text-blue-400 dark:hover:bg-gray-600 dark:hover:text-white hover:bg-opacity-50 dark:focus:text-black transition ease-linear font-sans antialiased sm:subpixel-antialiased md:antialiased
+        dark:text-blue-400 dark:hover:bg-gray-600 dark:hover:text-white hover:bg-opacity-50 dark:focus:text-black transition ease-linear font-sans antialiased sm:subpixel-antialiased md:antialiased dark:print:text-blue-700
     }
     p a {
         @apply rounded-none focus:border-black focus:border-b-2
